// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing graphql request salespoints MUTATION producers Testing updateSalespoint(producerId: ID!, salespoint: SalespointInput!) should fail updating the salespoint of a producer because invalid producerId received (too long) 1`] = `
Object {
  "data": Object {
    "updateSalespoint": null,
  },
  "errors": Array [
    [GraphQLError: Received producerId is invalid!],
  ],
}
`;

exports[`Testing graphql request salespoints MUTATION producers Testing updateSalespoint(producerId: ID!, salespoint: SalespointInput!) should fail updating the salespoint of a producer because invalid producerId received (too short) 1`] = `
Object {
  "data": Object {
    "updateSalespoint": null,
  },
  "errors": Array [
    [GraphQLError: Received producerId is invalid!],
  ],
}
`;

exports[`Testing graphql request salespoints MUTATION producers Testing updateSalespoint(producerId: ID!, salespoint: SalespointInput!) should fail updating the salespoint of a producer because not authenticated 1`] = `
Object {
  "data": Object {
    "updateSalespoint": null,
  },
  "errors": Array [
    [GraphQLError: Sorry, you need to be authenticated to do that.],
  ],
}
`;

exports[`Testing graphql request salespoints MUTATION producers Testing updateSalespoint(producerId: ID!, salespoint: SalespointInput!) should fail updating the salespoint of a producer because unknown producerId received 1`] = `
Object {
  "data": Object {
    "updateSalespoint": null,
  },
  "errors": Array [
    [GraphQLError: Received producerId is not in the database!],
  ],
}
`;

exports[`Testing graphql request salespoints MUTATION producers Testing updateSalespoint(producerId: ID!, salespoint: SalespointInput!) should fail updating the salespoint of a producer because you can't modify someone else than yourself 1`] = `
Object {
  "data": Object {
    "updateSalespoint": null,
  },
  "errors": Array [
    [GraphQLError: You can't modify information of another user than yourself!],
  ],
}
`;
